Fixed: Scrollbars are not styled on Firefox

--- a/themes/adwaita-dark.css
+++ b/themes/adwaita-dark.css
@@ -139,6 +139,7 @@ th, td {
  * Scrollbar
  */
 
+/* Chromium, WebKit */
 ::-webkit-scrollbar {
   background-color: transparent;
 }
@@ -170,6 +171,13 @@ th, td {
 ::-webkit-scrollbar-thumb:hover {
   background-color: color(srgb 0.48 0.48 0.48);
   border-radius: 4px;
+}
+
+/* Gecko */
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: color(srgb 1 1 1 / 0.25) transparent;
+  }
 }
 
 /*****************************************************************************************************************/
