--- a/themes/cupertino.css
+++ b/themes/cupertino.css
@@ -142,6 +142,7 @@ th, td {
  * Scrollbar
  */
 
+/* Chromium, WebKit */
 ::-webkit-scrollbar {
   background-color: transparent;
 }
@@ -151,6 +152,13 @@ th, td {
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: color(srgb 0 0 0 / 0.5);
+}
+
+/* Gecko */
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: color(srgb 0 0 0 / 0.23) transparent;
+  }
 }
 
 /*****************************************************************************************************************/
