--- a/themes/fluent-dark.css
+++ b/themes/fluent-dark.css
@@ -142,6 +142,7 @@ img {
  * Scrollbar
  */
 
+/* Chromium, WebKit */
 ::-webkit-scrollbar {
   background-color: transparent;
 }
@@ -172,6 +173,13 @@ img {
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: color(srgb 0.62 0.62 0.62);
+}
+
+/* Gecko */
+@supports not selector(::-webkit-scrollbar) {
+  * {
+    scrollbar-color: color(srgb 0.62 0.62 0.62) transparent;
+  }
 }
 
 /*****************************************************************************************************************/
